Cleanup extension loading related tests